--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ anyhow = "1.0.75"
 askama = "0.12.1"
 async-trait = "0.1.74"
 axum = "0.6.20"
+graphql_client = "0.13.0"
 jsonwebtoken = "9.1.0"
-reqwest = "0.11.22"
+reqwest = { version = "0.11.22", features = ["json"] }
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.33.0", features = ["full"] }
